<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FirstActivity">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/label_book_ticket"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_book_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText_ten_sach"
        android:layout_width="0dp"
        android:inputType="text"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RadioGroup
        android:id="@+id/radioGroupbook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editText_ten_sach">

        <RadioButton
            android:id="@+id/sgk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="textbook"
            android:text="@string/label_text_book" />

        <RadioButton
            android:id="@+id/tt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="novel"
            android:text="@string/label_novel" />

        <RadioButton
            android:id="@+id/kh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="science"
            android:text="@string/label_science_book" />

        <RadioButton
            android:id="@+id/tl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="psychology"
            android:text="@string/label_psychology_book" />
    </RadioGroup>

    <Button
        android:id="@+id/button_booking"
        android:layout_width="0dp"
        android:layout_margin="6dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/action_book_booking"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupbook"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <Button
        android:id="@+id/button_update"
        android:layout_width="0dp"
        android:layout_margin="6dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:text="@string/action_update"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/button_booking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupbook"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="start"
        android:text="@string/label_list_of_book"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_booking" />

    <ListView
        android:id="@+id/listView_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>